# docker-monorepo-self-dependent

./: README.md
.github/: dependabot.yml
.github/actions/build-and-push/: action.yml
.github/actions/run-sample/: action.yml
.github/workflows/: build-bare-image.yml  build-edge-image.yml  build-full-image.yml  run-node-sample.yml  run-python-sample.yml
images/bare/: Dockerfile
images/edge/: Dockerfile
images/full/: Dockerfile
samples/node/: Dockerfile  entrypoint.sh  index.js  package-lock.json  package.json
samples/python/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
