[tool.poetry]
name = "python-weather-app"
version = "0.1.0"
description = ""
authors = ["Caian Ertl <hi@caian.org>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
jedi = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
